# avnm-pool-cidr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: record-fixtures.sh
src/avnm_pool_cidr/: __init__.py  cidr.py  cli.py  errors.py  ipam.py  py.typed
tests/: conftest.py  test_cidr.py  test_cli.py  test_cli_with_fixtures.py  test_ipam.py
tests/fixtures/: list-associated-populated.json  pool-show-no-prefixes.json  pool-show.json
