[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avnm-pool-cidr"
dynamic = ["version"]
description = "Pick the next available CIDR prefix from an Azure Virtual Network Manager IPAM pool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Naeem Hossain", email = "naeemhossain.mail@gmail.com" },
]
keywords = ["azure", "avnm", "ipam", "cidr", "network", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[project.scripts]
avnm-pool-cidr = "avnm_pool_cidr.cli:app"
apc = "avnm_pool_cidr.cli:app"

[project.urls]
Homepage = "https://github.com/NaeemH/avnm-pool-cidr"
Repository = "https://github.com/NaeemH/avnm-pool-cidr"
Issues = "https://github.com/NaeemH/avnm-pool-cidr/issues"
Changelog = "https://github.com/NaeemH/avnm-pool-cidr/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/avnm_pool_cidr/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/avnm_pool_cidr"]

[tool.hatch.build.targets.sdist]
include = [
    "src/avnm_pool_cidr",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src/avnm_pool_cidr"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
